<?xml version="1.0"?>
<package>
  <name>hansagv_gazebo</name>
  <version>0.0.0</version>
  <description>The package for simulation of X-1 plus in Gazebo</description>

  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

  <export>

  </export>
</package>
